--- a/index.html
+++ b/index.html
@@ -160,60 +160,85 @@
               </ul>
               <div class="recommend">
                 <p class="recommend__count">
-                    Lucy and 3 other friends recommend this hotel
+                  Lucy and 3 other friends recommend this hotel
                 </p>
                 <div class="recommend__friends">
-                    <img src="img/user-1.jpg" alt="user-photo-1" class="recommend__photo">
-                    <img src="img/user-2.jpg" alt="user-photo-2" class="recommend__photo">
-                    <img src="img/user-3.jpg" alt="user-photo-3" class="recommend__photo">
-                    <img src="img/user-4.jpg" alt="user-photo-4" class="recommend__photo">
+                  <img
+                    src="img/user-1.jpg"
+                    alt="user-photo-1"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-2.jpg"
+                    alt="user-photo-2"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-3.jpg"
+                    alt="user-photo-3"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="user-photo-4"
+                    class="recommend__photo"
+                  />
                 </div>
               </div>
             </div>
             <div class="user-reviews">
-               <figure class="review">
+              <figure class="review">
                 <blockquote class="review__text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati provident et cumque quam accusantium natus minima recusandae sit asperiores omnis, eveniet suscipit odio nesciunt eos perferendis sed quis maiores quibusdam.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Obcaecati provident et cumque quam accusantium natus minima
+                  recusandae sit asperiores omnis, eveniet suscipit odio
+                  nesciunt eos perferendis sed quis maiores quibusdam.
                 </blockquote>
                 <figcaption class="review__user">
-                    <img src="/img/user-1.jpg" alt="photo-1" class="review__photo" >
-                    <div class="review__user-box">
-                        <p class="review__user-name">
-                            Nick Smith
-                        </p>
-                        <p class="review__user-date">
-                            Feb 23rd, 2017
-                        </p>
-                    </div>
-                    <div class="review__rating">
-                        7.8
-                    </div>
+                  <img
+                    src="/img/user-1.jpg"
+                    alt="photo-1"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Nick Smith</p>
+                    <p class="review__user-date">Feb 23rd, 2017</p>
+                  </div>
+                  <div class="review__rating">7.8</div>
                 </figcaption>
-               </figure>
+              </figure>
 
-               <figure class="review">
+              <figure class="review">
                 <blockquote class="review__text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati provident et cumque quam accusantium natus minima recusandae sit asperiores omnis, eveniet suscipit odio nesciunt eos perferendis sed quis maiores quibusdam.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Obcaecati provident et cumque quam accusantium natus minima
+                  recusandae sit asperiores omnis, eveniet suscipit odio
+                  nesciunt eos perferendis sed quis maiores quibusdam.
                 </blockquote>
                 <figcaption class="review__user">
-                    <img src="/img/user-2.jpg" alt="photo-1" class="review__photo" >
-                    <div class="review__user-box">
-                        <p class="review__user-name">
-                            Mary Famous
-                        </p>
-                        <p class="review__user-date">
-                            Feb 17rd, 2017
-                        </p>
-                    </div>
-                    <div class="review__rating">
-                        9.4
-                    </div>
+                  <img
+                    src="/img/user-2.jpg"
+                    alt="photo-1"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Mary Famous</p>
+                    <p class="review__user-date">Feb 17rd, 2017</p>
+                  </div>
+                  <div class="review__rating">9.4</div>
                 </figcaption>
-               </figure>
-               <button class="btn-inline">
-                Show all <span>&rarr;</span>
-               </button>
+              </figure>
+              <button class="btn-inline">Show all <span>&rarr;</span></button>
             </div>
+          </div>
+          <div class="cta">
+            <h2 class="cta__book-now">
+              Good news! We have 4 free rooms for your selected dates!
+            </h2>
+            <button class="btn">
+                <span class="btn__visible">Book now</span>
+                <span class="btn__invisible">Only 4 rooms left</span>
+            </button>
           </div>
         </main>
       </div>
